// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-button Should render an danger button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--danger" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--danger mg-button--icon" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--danger-alt" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--danger-alt mg-button--icon" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--flat" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--flat mg-button--icon" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an info button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--info" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an info button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--icon mg-button--info" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--primary" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--icon mg-button--primary" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--secondary" id="identifier">
    Text button
  </button>
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-label="label" class="mg-button mg-button--icon mg-button--secondary" id="identifier">
    Text button
  </button>
</mg-button>
`;
